[gd_scene load_steps=32 format=3 uid="uid://dyeqfl8b43yw2"]

[ext_resource type="Script" uid="uid://hrcgcwwbv5kh" path="res://Scripts/player.gd" id="1_ka4io"]
[ext_resource type="Texture2D" uid="uid://buwxb1evi7yl8" path="res://Assets/Player.png" id="2_uwkt8"]
[ext_resource type="Script" uid="uid://ijb7mljfpwcm" path="res://Scripts/Resources/finiteStateMachine.gd" id="3_ghsau"]
[ext_resource type="Script" uid="uid://dw4pw3b1ujxtn" path="res://Scripts/States/PlayerStates/playerIdleState.gd" id="4_051wf"]
[ext_resource type="Script" uid="uid://x5i0dl30cssp" path="res://Scripts/States/PlayerStates/playerFallState.gd" id="5_hvqaw"]
[ext_resource type="Script" uid="uid://cri5hnxskavfs" path="res://Scripts/States/PlayerStates/playerWalkState.gd" id="6_w128n"]
[ext_resource type="Script" uid="uid://bv8k3s3wpkusn" path="res://Scripts/States/PlayerStates/playerRunState.gd" id="7_8vk4f"]
[ext_resource type="Script" uid="uid://6lkky4hfymds" path="res://Scripts/States/PlayerStates/playerJumpStart.gd" id="8_8vk4f"]
[ext_resource type="Script" uid="uid://dcc26a5kw02ts" path="res://Scripts/States/PlayerStates/playerSlowdownState.gd" id="9_0xky0"]
[ext_resource type="Script" uid="uid://cbwegb4p7jueg" path="res://Scripts/States/PlayerStates/playerLandState.gd" id="11_epbei"]
[ext_resource type="Script" uid="uid://dfn17g18i6x23" path="res://Scripts/States/PlayerStates/playerJumpState.gd" id="11_yk0uc"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2846a"]
radius = 37.0
height = 210.0

[sub_resource type="Animation" id="Animation_ttkxq"]
resource_name = "Falling"
length = 0.500005
loop_mode = 1
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.208333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [52, 53]
}

[sub_resource type="Animation" id="Animation_7j23p"]
resource_name = "FastJumpStart"
length = 0.0208354
step = 0.0208333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(6, 2)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MainFSM/PlayerStartJump")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0208333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"handleState"
}]
}

[sub_resource type="Animation" id="Animation_j60po"]
resource_name = "HighLand"
length = 0.333338
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.208333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [54, 55, 56]
}

[sub_resource type="Animation" id="Animation_bkqu3"]
resource_name = "IdleJump"
length = 0.500005
loop_mode = 1
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [40, 41]
}

[sub_resource type="Animation" id="Animation_1bstl"]
resource_name = "IdleJumpStart"
length = 0.166671
step = 0.0416667
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainFSM/PlayerStartJump")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.166667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"HandleState"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0416667, 0.125),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [36, 37, 38]
}

[sub_resource type="Animation" id="Animation_8iqms"]
resource_name = "IdleStanding"
loop_mode = 1
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.502829),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [14, 15]
}

[sub_resource type="Animation" id="Animation_0cceh"]
resource_name = "Land"
length = 0.208338
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0416667, 0.125),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [54, 55, 56]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MainFSM/PlayerLanding:canChangeStates")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.208333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_epbei"]
resource_name = "LowLand"
length = 0.0833376
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0416667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [54, 56]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MainFSM/PlayerLanding:canChangeStates")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0833333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_paosx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainFSM/PlayerSlowdown:runStopIdle")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MainFSM/PlayerSlowdown:walkStopIdle")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(12.49, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("MainFSM/PlayerLanding:canChangeStates")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite:frame_coords")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(6, 2)]
}

[sub_resource type="Animation" id="Animation_eepyi"]
resource_name = "Run"
length = 0.666671
loop_mode = 1
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_ex721"]
resource_name = "RunJump"
length = 0.500005
loop_mode = 1
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [50, 51]
}

[sub_resource type="Animation" id="Animation_rc7sg"]
resource_name = "RunJumpStart"
length = 0.0833376
step = 0.0416667
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainFSM/PlayerStartJump")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0833333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"HandleState"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0416667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [47, 48]
}

[sub_resource type="Animation" id="Animation_6f2l2"]
resource_name = "Walk"
loop_mode = 1
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.250427, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_7yu45"]
resource_name = "WalkJump"
length = 0.500005
loop_mode = 1
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [45, 46]
}

[sub_resource type="Animation" id="Animation_410xb"]
resource_name = "WalkJumpStart"
length = 0.125004
step = 0.0416667
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainFSM/PlayerStartJump")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.125),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"HandleState"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0416667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [42, 43]
}

[sub_resource type="Animation" id="Animation_yk0uc"]
resource_name = "WallJump"
length = 0.0416709
loop_mode = 1
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [61]
}

[sub_resource type="Animation" id="Animation_uwkt8"]
resource_name = "WallKick"
length = 0.375004
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0416667, 0.125, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [57, 58, 59, 60]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.208333, 0.25),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(29, 0), Vector2(29, 0), Vector2(12.49, 0)]
}

[sub_resource type="Animation" id="Animation_ejfu8"]
resource_name = "WallLand"
length = 0.166671
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [62, 63]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qumrt"]
_data = {
&"Falling": SubResource("Animation_ttkxq"),
&"FastJumpStart": SubResource("Animation_7j23p"),
&"HighLand": SubResource("Animation_j60po"),
&"IdleJump": SubResource("Animation_bkqu3"),
&"IdleJumpStart": SubResource("Animation_1bstl"),
&"IdleStanding": SubResource("Animation_8iqms"),
&"Land": SubResource("Animation_0cceh"),
&"LowLand": SubResource("Animation_epbei"),
&"RESET": SubResource("Animation_paosx"),
&"Run": SubResource("Animation_eepyi"),
&"RunJump": SubResource("Animation_ex721"),
&"RunJumpStart": SubResource("Animation_rc7sg"),
&"Walk": SubResource("Animation_6f2l2"),
&"WalkJump": SubResource("Animation_7yu45"),
&"WalkJumpStart": SubResource("Animation_410xb"),
&"WallJump": SubResource("Animation_yk0uc"),
&"WallKick": SubResource("Animation_uwkt8"),
&"WallLand": SubResource("Animation_ejfu8")
}

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_ka4io")

[node name="Sprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(12.49, 0)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_uwkt8")
hframes = 16
vframes = 8
frame = 38

[node name="Collider" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
position = Vector2(-4, 20)
shape = SubResource("CapsuleShape2D_2846a")

[node name="Animator" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_qumrt")
}

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true
position_smoothing_speed = 15.0

[node name="MainFSM" type="Node" parent="." node_paths=PackedStringArray("state")]
unique_name_in_owner = true
script = ExtResource("3_ghsau")
state = NodePath("PlayerIdle")
metadata/_custom_type_script = "uid://ijb7mljfpwcm"

[node name="PlayerIdle" type="Node" parent="MainFSM" node_paths=PackedStringArray("actor", "animator")]
unique_name_in_owner = true
script = ExtResource("4_051wf")
actor = NodePath("../..")
animator = NodePath("../../Animator")
metadata/_custom_type_script = "uid://dw4pw3b1ujxtn"

[node name="PlayerSlowdown" type="Node" parent="MainFSM" node_paths=PackedStringArray("actor", "animator")]
unique_name_in_owner = true
script = ExtResource("9_0xky0")
actor = NodePath("../..")
animator = NodePath("../../Animator")
metadata/_custom_type_script = "uid://dcc26a5kw02ts"

[node name="PlayerWalking" type="Node" parent="MainFSM" node_paths=PackedStringArray("actor", "animator")]
unique_name_in_owner = true
script = ExtResource("6_w128n")
actor = NodePath("../..")
animator = NodePath("../../Animator")
metadata/_custom_type_script = "uid://cri5hnxskavfs"

[node name="PlayerRuning" type="Node" parent="MainFSM" node_paths=PackedStringArray("actor", "animator")]
unique_name_in_owner = true
script = ExtResource("7_8vk4f")
actor = NodePath("../..")
animator = NodePath("../../Animator")
metadata/_custom_type_script = "uid://bv8k3s3wpkusn"

[node name="PlayerStartJump" type="Node" parent="MainFSM" node_paths=PackedStringArray("actor", "animator")]
unique_name_in_owner = true
script = ExtResource("8_8vk4f")
actor = NodePath("../..")
animator = NodePath("../../Animator")
metadata/_custom_type_script = "uid://6lkky4hfymds"

[node name="PlayerJump" type="Node" parent="MainFSM" node_paths=PackedStringArray("actor", "animator")]
unique_name_in_owner = true
script = ExtResource("11_yk0uc")
actor = NodePath("../..")
animator = NodePath("../../Animator")
metadata/_custom_type_script = "uid://dfn17g18i6x23"

[node name="PlayerFalling" type="Node" parent="MainFSM" node_paths=PackedStringArray("actor", "animator")]
unique_name_in_owner = true
script = ExtResource("5_hvqaw")
actor = NodePath("../..")
animator = NodePath("../../Animator")
metadata/_custom_type_script = "uid://x5i0dl30cssp"

[node name="PlayerLanding" type="Node" parent="MainFSM" node_paths=PackedStringArray("actor", "animator")]
unique_name_in_owner = true
script = ExtResource("11_epbei")
actor = NodePath("../..")
animator = NodePath("../../Animator")
metadata/_custom_type_script = "uid://cbwegb4p7jueg"

[node name="Timers" type="Node" parent="."]

[node name="CoyoteTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true
one_shot = true

[node name="BufferTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="Raycasts" type="Node2D" parent="."]

[node name="WallJump" type="Node2D" parent="Raycasts"]

[node name="BottomLeft" type="RayCast2D" parent="Raycasts/WallJump"]
position = Vector2(-4, 85)
target_position = Vector2(-50, 0)

[node name="BottomRight" type="RayCast2D" parent="Raycasts/WallJump"]
position = Vector2(-4, 85)
target_position = Vector2(50, 0)
